upgrade dependencies & shallow copy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,30 +37,32 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-                "black>=23.11.0",
+                "black>=26.1.0",
                 'contourpy==1.1.0',
                 'cycler==0.11.0',
                 'et-xmlfile==1.1.0',
                 'fonttools==4.42.1',
                 'importlib-resources==6.0.1',
                 'kiwisolver==1.4.4',
-                "isort>=5.12.0",
-                'matplotlib==3.7.2',
-                'networkx==3.1',
-                "numpy==1.26.2",
-                'openpyxl==3.1.2',
+                "isort>=7.0.0",
+                'matplotlib==3.10.8',
+                'networkx==3.6.1',
+                "numpy==2.4.2",
+                'openpyxl==3.1.5',
                 'packaging==23.1',
-                'pandas==2.0.3',
-                "pdoc>=14.1.0",
+                'pandas==3.0.0',
+                "pdoc>=16.0.0",
                 'Pillow==10.0.0',
                 'pyparsing==3.0.9',
-                "pytest>=7.4.3",
+                "pytest>=9.0.2",
                 'python-dateutil==2.8.2',
                 'pytz==2023.3',
-                "scipy>=1.13.0",
+                "scipy>=1.16.3",
                 'six==1.16.0',
                 'tzdata==2023.3',
                 'zipp==3.16.2',
-                'statsmodels>=0.14.1',
-                'scikit-learn>=1.4.1.post1',
+                'statsmodels>=0.14.6',
+                'scikit-learn>=1.8.0',
+                'cupy-cuda12x==14.0.0',
+                'nx-cugraph-cu12==26.2.0',
                ]
